Personnalisé pour Virus

--- a/Chromeduino Chrome App/windows/main/window.html
+++ b/Chromeduino Chrome App/windows/main/window.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Chromeduino</title>
+    <title>Arduino Virus</title>
 
     <link rel="stylesheet" href="../../resources/purecss.min.css" />
     <link rel="stylesheet" href="../../resources/font-awesome.min.css" />
@@ -30,24 +30,27 @@
     <div id="header" class="header pure-menu pure-menu-horizontal">
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
-                <a href="#" id="check" class="pure-menu-link" ><i class="fa fa-check"></i> Check</a>
+                <a href="#" id="check" class="pure-menu-link" ><i class="fa fa-check"></i> Vérifier</a>
             </li>
             <li class="pure-menu-item">
-                <a href="#" id="program" class="pure-menu-link"><i class="fa fa-arrow-right"></i> Program</a>
+                <a href="#" id="program" class="pure-menu-link"><i class="fa fa-arrow-right"></i> Programmer</a>
             </li>
             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                <a href="#" class="pure-menu-link"> File </a>
+                <a href="#" class="pure-menu-link"> Fichier </a>
                 <ul class="pure-menu-children">
                     <li class="pure-menu-item">
-                        <a href="#" id="load" class="pure-menu-link"><i class="fa fa-file-code-o"></i> Open</a>
+                        <a href="#" id="load" class="pure-menu-link"><i class="fa fa-file-code-o"></i> Ouvrir</a>
                     </li>
                     <li class="pure-menu-item">
-                        <a href="#" id="save" class="pure-menu-link"><i class="fa fa-floppy-o"></i> Save</a>
+                        <a href="#" id="save" class="pure-menu-link"><i class="fa fa-floppy-o"></i> Enregistrer</a>
                     </li>
                     <li class="pure-menu-item">
-                        <a href="#" id="saveas" class="pure-menu-link"><i class="fa fa-floppy"></i> Save As...</a>
+                        <a href="#" id="saveas" class="pure-menu-link"><i class="fa fa-floppy"></i> Enregistrer sous...</a>
                     </li>
-                    <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+                    <!--li class="pure-menu-item">
+                        <a href="#" id="newproject" class="pure-menu-link"><i class="fa fa-floppy"></i> Nouveau</a>
+                    </li-->
+                    <!--li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
                         <a href="#" id="newcheck" class="pure-menu-link"><i class="fa fa-file-o"></i> New</a>
                         <ul class="pure-menu-children">
                             <li class="pure-menu-item">
@@ -57,12 +60,12 @@
                                 <a href="#" id="newproject" class="pure-menu-link">Yes</a>
                             </li>
                         </ul>
-                    </li>
+                    </li-->
                 </ul>
             </li>
 
             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                <a href="#" class="pure-menu-link"><i class="fa fa-wrench"></i> Tools </a>
+                <a href="#" class="pure-menu-link"><i class="fa fa-wrench"></i> Configuration </a>
                 <ul class="pure-menu-children">
                     <li class="pure-menu-item">
                         <a href="#" class="pure-menu-link">
